# Linux_ICM20948_DMP

./: ICM20948_example  README.md
ICM20948/: CMakeLists.txt  Pi-ICM20948.cpp  Pi-ICM20948.h
ICM20948/examples/: ICM20948_PI_DMP.cpp
ICM20948/include/: CircularBuffer.h  Pi-ICM20948.h
ICM20948/src/: Pi-ICM20948.cpp
ICM20948/src/utils/: CircularBuffer.c
